Fix issue with footer overlapping. Update Sorcerers Storm image.

--- a/client/src/components/AboutCard/style.css
+++ b/client/src/components/AboutCard/style.css
@@ -1,4 +1,4 @@
 .photo {
   max-width: 90%;
-  margin: 5% 5%;
+  margin: 5%;
 }
